Public/styles/components/header.scss
@import '../globals/variables';

.site-header {
	max-width: $maxWidth;
	margin: 2.5em auto 0 auto;
	font-family: $headerFont;

	a {
		line-height: 1.25em;

		&.codementor {
			position: relative;
			top: 2px;
		}
	}

	& > .navigation > a.runtime-navigation {
		position: relative;
		bottom: 2px;
	}
}

.banner {
	font-size: 2.5em;
	display: inline-block;
}

.banner-border {
	width: 100%;
	border-bottom: 2px solid $textColor;
}

.search-form {
	background-color: rgba(0, 0, 0, 0);
	margin-top: 17px;
	float: right;
}

.text-field {
	padding: 4px 0;
	color: $linkColor;
	border: 0;
	text-align: right;
	border-bottom: none;
	outline: none;
	border-radius: 0;

	font-family: $lightFont;
	font-size: 1em;

	&::-webkit-input-placeholder {
		color: $gray;
	}
	&::-moz-placeholder {
		color: $gray;
	}
	&:-moz-placeholder {
		color: $gray;
	}

	&:focus {
		&::-webkit-input-placeholder {
			color: $linkColor;
		}
		&::-moz-placeholder {
			color: $linkColor;
		}
		&:-moz-placeholder {
			color: $linkColor;
		}
	}
}

.search-results {
	display: inline-block;
	color: $linkColor;
	font-family: $lightFont;
	font-size: 0.8em;
	margin-left: 2px;
}

.navigation {
	// Because FA icons take a bit to load, and there's a height difference,
	// and all the content moves down after they load.
	min-height: 32px;
	text-align: right;
	margin-top: 1px;

	.fa {
		margin-top: 8px;
		margin-left: 14px;

		display: inline-block;
		font-size: 1.4em;
	}

	a:first-child .fa {
		margin-left: 0;
	}

	.runtime-navigation {
		margin-left: 20px;
		font-family: "Titillium Web";
		font-weight: 700;
		font-size: 1.5em;

		.first-half {
			color: #00356A;
		}

		.second-half {
			color: #0371B8;
		}
	}
}

@include responsiveWidth($phoneMedia) {
	.banner {
		text-align: center;
		width: 100%;
		text-align: center;
	}

	.site-header  {
		a.codementor {
			top: 6px;
		}

		img.codementor {
			height: 25px;
		}

		& > .navigation > a.home-navigation > i.fa.fa-home {
			position: relative;
			right: 4.5px;
			margin-left: 16px;
		}
	}

	.text-field {
		@include lightBottomBorder(1px);
		font-size: 0.9em;
		text-align: left;

		&:focus {
			border-bottom: 1px solid $linkColor;
		}
	}

	.search-form {
		float: left;
		margin-top: 6px;
	}

	.navigation {
		margin-left: auto;
		max-width: 165px;
	}
}

@include responsiveWidth(570px) {
	.navigation .fa {
		margin-left: 8px;

		&.fa-user {
			margin-right: 1px;
		}
	}

	.navigation .runtime-navigation {
		margin-left: 12px;
	}
}

@include responsiveWidth(356px) {
	.site-header {
		font-size: 1em;
	}
}

@include responsiveWidth(330px) {
	.site-header {
		font-size: 0.9em;
	}
}

